@@ -536,7 +536,6 @@ public class FolderDisplayPanel extends JPanel {
     while (! done && newRow < messageTable.getRowCount() ) {
       MessageProxy mp = getFolderInfo().getMessageProxy(newRow);
       try {
-
 	//if ((removedProxies != null && removedProxies.contains(mp)) || mp.getMessageInfo().getFlags().contains(Flags.Flag.DELETED) || (unread && mp.getMessageInfo().getFlags().contains(Flags.Flag.SEEN))) {
 	if ((removedProxies != null && removedProxies.contains(mp)) || mp.isDeleted() || (unread && mp.isSeen())) {
 	  newRow ++;
