@@ -385,8 +385,8 @@ public class PookaDesktopPaneUIFactory implements PookaUIFactory {
 	  java.awt.Dimension dpSize = displayPanel.getPreferredSize();
 	  JScrollPane scrollPane = new JScrollPane(displayPanel, JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED);
 	  scrollPane.setPreferredSize(new java.awt.Dimension(Math.min(dpSize.width + 10, 500), Math.min(dpSize.height + 10, 300)));
-	  System.err.println("scrollPane.getPreferredSize() = " + scrollPane.getPreferredSize());
-	  System.err.println("displayPanel.getPreferredSize() = " + displayPanel.getPreferredSize());
+	  //System.err.println("scrollPane.getPreferredSize() = " + scrollPane.getPreferredSize());
+	  //System.err.println("displayPanel.getPreferredSize() = " + displayPanel.getPreferredSize());
 	  //JScrollPane scrollPane = new JScrollPane(displayPanel, JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
 	  //scrollPane.setMaximumSize(new java.awt.Dimension(300,300));
 	  //scrollPane.setPreferredSize(new java.awt.Dimension(300,300));
