@@ -1,3 +1,6 @@
+optimized large deletes of messages on imap so it doesn't poll the store
+for each message removed.
+
 fixed a bug where offline changes might not get caught after reconnection
 to imap store.
 
